sample-todo-app/mysql-master.yaml
kind: Service
apiVersion: v1
metadata:
  name:  mysql-master
  labels:
    app: mysql-master
spec:
  ports:
  - name:  mysql
    port:  3306
  clusterIP: None
  selector:
    app: mysql-master

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  mysql-master
  labels:
    app: mysql-master
spec:
  serviceName: "mysql-master"
  selector:
    matchLabels:
      app: mysql-master
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-master
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: gihyodocker/tododb:latest
          name:  mysql
          args:
          - "--ignore-db-dir=lost+found"
          ports:
          - containerPort:  3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes:  ["ReadWriteOnce"]
      storageClassName: ssd
      resources:
        requests:
          stotage: 4Gi
