sample-todo-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:  ingress
spec:
  rules:
    - http:
        paths:
        - path:  /*
          backend:
              serviceName:  todoweb
              servicePort:  80
